librope_sources = files(
    'cursor/editing.c',
    'cursor/lifecycle.c',
    'cursor/list.c',
    'cursor/movement.c',
    'cursor/query.c',
    'cursor/cmp.c',
    'iterator.c',
    'node/info.c',
    'node/insert.c',
    'node/mutation.c',
    'node/navigation.c',
    'node/node.c',
    'node/tags.c',
    'pcre.c',
    'pool.c',
    'range.c',
    'rope.c',
    'str.c',
)
